# craft-cli

./: .gitignore  CHANGELOG.md  README.md  go.mod  install.sh  main.go  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
cmd/: activity.go  agent.go  api_keys.go  auth.go  billing.go  config.go  firewall.go  helpers.go  hosting.go  nodes.go  plans.go  profile.go  rdns.go  referral.go  rescue.go  root.go  security.go  snapshot.go  ssh_keys.go  system.go  test_api.go  tickets.go  update.go  version.go  vm.go  wallet.go
craft/: __init__.py  __main__.py  cli.py  client.py  config.py  interactive.py  output.py
craft/commands/: activity.py  agent.py  api_keys.py  auth.py  billing.py  firewall.py  hosting.py  nodes.py  plans.py  profile.py  rdns.py  referral.py  rescue.py  security.py  snapshot.py  ssh_keys.py  system.py  test_api.py  tickets.py  vm.py  wallet.py
docs/: rest-api-import-to-postman.json
internal/client/: client.go
internal/config/: config.go
internal/output/: output.go
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_output.py
