[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "craft-cli"
dynamic = ["version"]
description = "CLI for CraftIntertech cloud platform"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "tabulate>=0.9",
    "InquirerPy>=0.3.4",
]

[project.scripts]
craft = "craft.cli:cli"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
